<resources>
    <string name="app_name">Odin Wallet</string>
    <string name="create_a_wallet">Create a wallet</string>
    <string name="log_in">Log in</string>
    <string name="new_wallet">New Wallet</string>
    <string name="strength_weak">Weak</string>
    <string name="strength_medium">Regular</string>
    <string name="strength_strong">Strong</string>
    <string name="strength_normal">Normal</string>
    <string name="agree_terms_of_service">By creating a new wallet , you agree to the</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ssl_pinning_invalid">Secure connection to the host has failed. This might indicate malicious activity. Please verify your network connection and device before continuing.</string>
    <string name="ssl_no_connection">We are unable to connect to the host to establish a secure connection. Please verify your network connection and device before continuing.</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="empty_address">Please fill in the destination address</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="empty_amount">Please fill in a valid amount</string>
    <string name="no_enough_odin_balance">You dont have enough odin balance for this exchange</string>
    <string name="too_many_decimal_points">Not allowed number of decimal points</string>
    <string name="not_enough_balance">You do not have enough token balance</string>
    <string name="not_enough_token_supply">There are not enough token supply </string>
    <string name="not_enough_transaction_fee">You don not have enough Ethers for the fee of this transaction."</string>
    <string name="min_trans_fee">  0.0001 ETH </string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_password_too_short">Please enter more than 3 characters</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="creating_wallet">Creating wallet</string>
    <string name="hd_error">HD wallet error</string>
    <string name="blockchain_tos">ODIN Terms of Service</string>
    <string name="weak_password">The selected password is too weak . We strongly suggest you select a different one. Would you like to define a new password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">cancel</string>
    <string name="noImageAvailable">No Image Available</string>
    <string name="dialog_continue">Continue</string>
    <string name="password_reveal_warning">Be careful! Revealing this text allows your password to be copied to the clipboard, which can then be read by all applications on your device. Also be aware of people standing behind you!</string>
    <string name="action_settings">Settings</string>
    <string name="pin_entry">Enter PIN</string>
    <string name="swipe_receive_hint">Swipe to receive</string>
    <string name="create_pin">Create PIN</string>
    <string name="pin_4_strikes">4 failed PIN attempts. Please login again.</string>
    <string name="password_or_wipe">Enter using your password or forget this wallet</string>
    <string name="use_password">Use password</string>
    <string name="wipe_wallet">Forget wallet</string>
    <string name="password_entry">Please enter password</string>
    <string name="validating_password">Validating Password…</string>
    <string name="validating_pin">Validating PIN…</string>
    <string name="zero_pin">0000 is an invalid PIN. Please try again.</string>
    <string name="common_pin_dialog_title">Warning</string>
    <string name="common_pin_dialog_message">The PIN you have selected is extremely common and may be easily guessed by someone with access to your phone within 3 tries. Do you still want to use this Pin? </string>
    <string name="common_pin_dialog_try_again">Try again</string>
    <string name="common_pin_dialog_continue">Continue</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_mismatch_error">PINs do not match</string>
    <string name="invalid_pin">Invalid PIN. Please try again.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="send_odin">Send</string>
    <string name="receive_odin">Request</string>
    <string name="overview">Transactions</string>
    <string name="dashboard_title">Home</string>
    <string name="portfolio_title">Portfolio</string>
    <string name="exchange_title">Exchange</string>
    <string name="portfolio_name">Name</string>
    <string name="portfolio_value">ODIN Value</string>
    <string name="portfolio_holdings">Holdings</string>
    <string name="exchange_header">Exchange ODIN to Pre ICO Token</string>
    <string name="rate">Rate :</string>
    <string name="amount_label">0.000</string>
    <string name="available_tokens">Available</string>
    <string name="read_more">More about</string>
    <string name="maximum">maximum</string>
    <string name="minimum">minimum</string>
    <string name="forgot_password">Forgot Password? </string>
    <string name="logout_title">Logout</string>
    <string name="logout_confirm_msg">Are you sure you want to logout?</string>
    <string name="token">Token</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="ico_token">ICO Token</string>
    <string name="ledger_row_header_date">Date</string>
    <string name="ledger_row_header_invest_id">Invest ID</string>
    <string name="ledger_row_header_amount">Amount</string>
    <string name="ledger_row_header_trans_id">Transaction Hash</string>
    <string name="share_instructions">Tap to copy this address. Share it with the sender via email or text.</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="receive_address_to_clipboard">Copy this receive address to the clipboard? If so, be advised that other applications may be able to look at this information.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="odin_points">ODIN Points</string>
    <string name="odin_divided_points">ODIN \nPoints</string>
    <string name="news_feed">News Feed</string>
    <string name="news_details">News Details</string>
    <string name="subscription">Subscription</string>
    <string name="faq">FAQ</string>
    <string name="help_center">Help Center</string>
    <string name="send_choose_coin">Choose coin to send  </string>
    <string name="enter_wallet_address">Enter Wallet Address </string>
    <string name="enter_amount">Enter Amount </string>
    <string name="transaction_fee">Min Txn Fee :  </string>
    <string name="points_info">Info</string>
    <string name="points_history">History</string>
    <string name="redeemable_points">Redeemable Points</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscription_title">Subscription</string>
    <string name="available_points">Available ODIN Points : </string>
    <string name="select_package">Please select your desired subscription</string>
    <string name="profile">Profile</string>
    <string name="options_id">Wallet ID</string>
    <string name="account_status">Account Status</string>
    <string name="mobile">Mobile</string>
    <string name="security">Security</string>
    <string name="change_pin_code">Change PIN</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="app">App</string>
    <string name="how_to_earn_points">How to earn points ?</string>
    <string name="preferences_about_title">About Us</string>
    <string name="options_tos">Terms of Service</string>
    <string name="options_privacy">Privacy Policy</string>
    <string name="backup_key">Backup Key</string>
    <string name="guid_to_clipboard">Copy your Wallet ID to the clipboard? If so, be advised that other applications may be able to look at this information.</string>
    <string name="trans_to_clipboard">Copy Transaction hash to the clipboard? If so, be advised that other applications may be able to look at this information.</string>
    <string name="backup_guid_to_clipboard">Copy your back up key to the clipboard? If so, be advised that other applications may be able to look at this information.</string>
    <string name="verify_email2">Your verified email address is used to send alerts to you when necessary.</string>
    <string name="update">Update</string>
    <string name="resend">Resend</string>
    <string name="not_specified">not specified</string>
    <string name="not_available">not available</string>
    <string name="verify">Verify</string>
    <string name="password_changed_notice">Your password has been changed</string>
    <string name="warning">Warning</string>
    <string name="change_password_summary">Your password is never shared with our servers, which means we cannot help reset your password if you forget it. Make sure you backup your funds from the side menu which can restore access to your wallet in the event of a lost password.</string>
    <string name="polite_no">No thanks</string>
    <string name="change_password_new_matches_current">You can\'t use your current password as your new password</string>
    <string name="password_changed">Password changed</string>
    <string name="email_sent">Email Sent</string>
    <string name="email_not_verified">Email Verification</string>
    <string name="email_sent_msg">Reset password link has been sent to your email .. </string>
    <string name="email_not_verified_msg">Your email is not verified .Please click on the link sent to your email upon registeration </string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="kyc">KYC</string>
    <string name="wallet">Wallet</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="middle_name_hint">Middle Name</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="email_hint">Email</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="review">Review</string>
    <string name="finish">Submit updates</string>
    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>
    <string name="personal_info">Personal Info</string>
    <string name="update_profile">Update Profile</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="proof_of_identity">Proof Of Identity</string>
    <string name="document_type">Type of Document</string>
    <string name="hint_document_type">Document Type</string>
    <string name="number_hint">Number</string>
    <string name="tax_hint">Tax ID</string>
    <string name="subscription_start_date">Start Date</string>
    <string name="subscription_end_date">End Date</string>
    <string name="subscription_points">Points</string>
    <string name="profile_should_be_updated">Your account status must be verified in order to perform this operation</string>
    <string name="private_key">Private Key </string>
    <string name="seed">Seed </string>
    <string name="status">Status </string>
</resources>