<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_points"
        android:icon="@drawable/vector_star"
        android:title="@string/odin_points" />
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/vector_news"
        android:title="@string/news_feed" />
    <item
        android:id="@+id/nav_subscription"
        android:icon="@drawable/vector_subscription"
        android:title="@string/subscription" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />
    <!--<item
        android:id="@+id/nav_kyc"
        android:icon="@drawable/ic_insert_drive_file_black_24dp"
        android:title="@string/kyc" />-->
    <item
        android:id="@+id/nav_faq"
        android:icon="@drawable/vector_help"
        android:title="@string/faq" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/vector_help"
        android:title="@string/help_center" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/vector_settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/vector_logout"
        android:title="@string/logout" />

</menu>